k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-node-api-demo
  namespace: app
spec:
  selector:
    app: eks-node-api-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
