k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/.*|$)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-kong-proxy
                port:
                  number: 80
