k8s/kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-api-route
  namespace: app
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eks-node-api-demo
                port:
                  number: 80
